spec/data/mockDefs/invalid/endpoint/mockDefInvalidEndpoint.js
'use strict';

module.exports = function(server, options) {
  return {
    respondTo: 'GET',
    endpoint: {},
    handledBy: () => {},
  };
};
